Site in construction
Added social networks links.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
+
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+	<body>
+
+		<h1>garciparedes Website</h1>
+
+		<p>Site in construction...</p>
+
+		<p>GitHub: <a href="https://github.com/garciparedes" target="_blank">github.com/garciparedes</a> </p>
+
+		<p>LinkedIn: <a href="https://www.linkedin.com/in/garciparedes" target="_blank">linkedin.com/in/garciparedes</a> </p>
+
+		<p>Twitter: <a href="https://twitter.com/garciparedes" target="_blank">twitter.com/garciparedes</a> </p>
+
+		<p>Intagram: <a href="https://instagram.com/garciparedes" target="_blank">instagram.com/garciparedes</a> </p>
+
+		<p>Facebook: <a href="https://facebook.com/garciparedes" target="_blank">facebook.com/garciparedes</a> </p>
+
+	</body>
+
 </html>
